--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/revspace/photo-gallery#readme",
   "dependencies": {
+    "bhttp": "^1.2.6",
     "bluebird": "^3.5.1",
+    "cookie-parser": "^1.4.5",
     "create-error": "^0.3.1",
     "default-value": "^1.0.0",
     "express": "^4.16.3",
